--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 <li class="item-cervezas">Cervezas</li>
                 <li class="item-cartaonline">Carta Online</li>
             </ul>
-
             <ul class="navbar-icons">
                 <li><img class="icon-cart" src="icons/Shape@2x.png" alt=""></li>
                 <li><img class="icon-wpp" src="icons/Group@2x.png" alt=""></li>
@@ -37,9 +36,7 @@
                 <li><img class="icon-cart-mobile" src="icons/Shape@2x.png" alt=""></li>
             </ul>
         </nav>
-
 <!--containerOnImage-->
-
         <div class="container-on-image">
             <div class="nav-arrows">
                 <div class="arrow-box1"><img class="img-arrow" src="img/Arrow_left.png" alt=""></div>
@@ -74,6 +71,7 @@
                     Elaboramos cerveza bajo las más antiguas tradiciones pero <br> con la tecnología y el gusto actual. <br><br>Desarrollamos todas nuestras variedades respetando los tiempos, procesos y temperamento propio de cada variedad para lograr el sabor único que hoy es nuestro sello diferencial.
                 </p>
             </div>
+            <!--simpleCarrousel-->
             <div class="carrousel">
                 <div class="carrousel-slide">
                     <div class="slide"><img id="img1" src="img/Fabrica_24 3.png" alt=""></div>
@@ -81,13 +79,12 @@
                     <div class="slide"><img id="img3" src="img/B05A6167.png" alt=""></div>
                 </div>
             </div>
+            <!--simpleCarrousel-->
         <img class="img-fabrica1" src="img/Fabrica_24.png" alt="">
         <p class="aux-texto-info-mobile">
             Elaboramos cerveza bajo las más antiguas tradiciones pero con la tecnología y el gusto actual.<br><br>Desarrollamos todas nuestras variedades respetando los tiempos, procesos y temperamento propio de cada variedad para lograr el sabor único que hoy es nuestro sello diferencial.
         </p>
         </div>
-
-
 <!--containerInfo-->
 <!--footer-->
         <div class="col2">
